Revert "Events page redesign (#1042)"
This reverts commit 2ea44e654ed332d20482a3136bd89ef6df2972e0.

--- a/src/pages/Actions/ActionEvent/EventCard/EventCard.module.css
+++ b/src/pages/Actions/ActionEvent/EventCard/EventCard.module.css
@@ -1,12 +1,15 @@
-.actionsWrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 0 auto;
+.background{
+    background-color: rgb(238, 238, 238);
 }
-.cardStyles {
-  width: 180px;
-  margin: 15px;
-  text-align: center;
+.actionsWrapper{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0 auto;
+}
+.cardStyles{
+    width: 180px;
+    margin: 15px;
+    text-align: center;
 }
