--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -1,195 +1,90 @@
 @plast-color: #3c5438;
 @plast-color-hover: #73bd79;
-@cancelation-color: #8b0000;
-@cancelation-color-hover: #ff0000;
-
-.event-breadcrumb {
-  margin-top: 7px;
-  padding: 3px 0 3px 0;
-  width: 100%;
-  text-align: center;
-}
-
-.modal-warning-icon {
-  color: var(--antd-wave-shadow-color);
-  font-size: 45px !important;
-}
-
-.modal-warning {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 13px;
-}
-
-.modal-warning-description {
-  margin: 0;
-  max-width: 85%;
-}
+@cancelation-color: #8B0000;
+@cancelation-color-hover: #FF0000;
 
 .event-info-background {
   padding: 20px 20px 20px 20px;
-  box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.eventActions {
+.eventActions{
   width: 100%;
   padding: 20px 20px 20px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.eventActions{
+  @media (max-width: 768px)and (min-width: 280px) {
+    margin-right: 5px;
+    text-size-adjust: scale(0.5);
+  }
 }
 
 .event-info-wrapper {
-  display: flex;
-  flex-direction: column;
   width: 100%;
-  margin: 0 10px 0 10px;
-  flex: 1 1;
-
-  @media (max-width: 800) {
-    flex-direction: column;
-  }
+  margin: auto;
 }
 
 .event-info-header {
-  margin-right: 10px;
-  width: 900px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  justify-content: space-around;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 5px;
-
-  @media (max-width: 1300px) {
-    width: 100%;
-  }
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  justify-content: center;
 }
 
-.eventGallary {
-  width: calc(100% - 900px);
+.eventGallary{
+  width: 100%;
+  margin-top: 40px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 10vw;
+  font-size: 10vw;  
+}
 
-  @media (max-width: 1300px) {
-    width: 100%;
-    margin-top: 40px;
+.upploadButton{
+  @media (max-width: 280px) {
+    margin-left: -37px;
+    transform: scale(0.8);
+  }
+  @media (max-width: 320px) and (min-width:290px){
+    margin-left: -30px;
+    transform: scale(0.9);
   }
 }
 
-.event-info-and-gallery {
+.picturesWall{
+  @media (max-width: 280px) {
+    width: 150px;
+  }
+  @media (max-width: 320px) and (min-width:290px){
+    width: 170px;
+  }
+}
+
+.participantsTable{
   width: 100%;
-  display: flex;
-  flex-direction: row;
-
-  @media (max-width: 1300px) {
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-
-.upload-button {
-  display: flex;
-  flex-direction: column;
-}
-
-.picturesWall {
-  width: 100%;
-  margin: 0;
-}
-
-.ant-card-cover img {
-  object-fit: cover;
-}
-
-.admin-card .ant-card-cover > * {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 100px;
-  aspect-ratio: 1 / 1;
-  height: auto;
-  width: 100%;
-}
-
-.admin-card-hoverable > .ant-card-body:hover {
-  text-decoration: none;
-  color: black;
-}
-
-.galleryImg .ant-image-img {
-  width: auto;
-  height: 200px;
-  display: block;
-  @media (max-width: 740px) {
-    height: 150px;
-  }
-}
-
-.galleryContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  height: auto;
-  max-height: 400px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  justify-content: center;
-  align-content: flex-start;
-  @media (max-width: 740px) {
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    justify-content: flex-start;
-  }
-}
-
-.gallery-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: baseline;
-
-  .edit-icon {
-    font-size: 23px;
-    color: var(--antd-wave-shadow-color);
-    padding-left: 10px;
-  }
-}
-
-.admin-gallery-modal {
-  width: 800px !important;
-}
-
-.participantsTable {
-  width: 100%;
-  margin: 40px 5px 0 5px;
+  margin-top: 40px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   display: flex;
   flex-direction: column;
-}
-
-.participantsTable div > .ant-row {
   justify-content: center;
 }
 
 .eventGallary:hover,
 .participantsTable:hover,
-.event-info-header:hover {
+.event-info-header:hover{
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -221,16 +116,6 @@
   align-items: center;
 }
 
-.feedbackInfo {
-  padding-left: 7px;
-  color: #999;
-  font-size: 0.4em;
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
 .iconsFlex {
   .iconsFlexBase();
   @media (max-width: 320px) {
@@ -248,15 +133,9 @@
   .iconsFlexBase();
   border-color: black !important;
   box-shadow: 0 0 0 !important;
+  background-color: rgba(210, 210, 210, 0.5);
   margin-top: 7px;
   padding-bottom: 6px;
-  align-items: baseline;
-}
-
-.rateFlex .ant-rate-star {
-  color: #3c5438;
-  stroke: #3c5438;
-  stroke-width: 10px;
 }
 
 .icon {
@@ -283,31 +162,32 @@ td {
 }
 
 .homeSlider {
-  @media (max-width: 280px) {
+  @media(max-width: 280px) {
     padding-left: 8px;
     padding-right: 8px;
-  }
-  @media (max-width: 376px) and (min-width: 319px) {
+      }
+  @media (max-width: 376px) and (min-width:319px) {
     width: 100%;
     height: 300px;
     padding-left: 8px;
     padding-right: 8px;
   }
-  @media (max-width: 540px) and (min-width: 411px) {
+  @media (max-width: 540px) and (min-width:411px) {
     width: 100%;
     height: 300px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (max-width: 540px) and (min-width: 412px) {
+  @media (max-width: 540px) and (min-width:412px) {
     width: 100%;
     height: 300px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  @media (max-width: 767px) and (min-width: 541px) {
+  @media (max-width: 767px) and (min-width:541px) {
     width: 100%;
     height: 300px;
+
   }
   @media (min-width: 768px) {
     width: 80%;
@@ -327,17 +207,18 @@ td {
   color: #3c5438;
   font-size: 20px;
   height: 90px;
-  @media (max-width: 540px) and (min-width: 411px) {
-    left: -4px;
-  }
-  @media (max-width: 376px) and (min-width: 319px) {
-    left: -7px;
+  @media(max-width: 540px) and (min-width:411px){
+    left:-4px;
+      }
+  @media(max-width: 376px) and (min-width:319px){
+    left:-7px;
     font-size: 14px;
-  }
-  @media (max-width: 280px) {
-    left: -7px;
+      }
+  @media(max-width: 280px) {
+    left:-7px;
     font-size: 14px;
-  }
+      }
+
 }
 
 .ant-carousel .slick-next,
@@ -348,36 +229,41 @@ td {
   color: #3c5438;
   font-size: 20px;
   height: 30px;
-  @media (max-width: 540px) and (min-width: 411px) {
-    right: -4px;
-  }
-  @media (max-width: 376px) and (min-width: 319px) {
-    right: -7px;
+  @media(max-width: 540px) and (min-width:411px){
+    right:-4px;
+      }
+  @media(max-width: 376px) and (min-width:319px){
+    right:-7px;
     font-size: 14px;
-  }
-  @media (max-width: 280px) {
-    right: -7px;
+      }
+  @media(max-width: 280px) {
+    right:-7px;
     font-size: 14px;
-  }
+      }
 }
 
 @media (max-width: 767px) {
-  .event-info-header {
-    justify-content: center;
+ .eventActions{
+   width: 100%;
+   display: contents;
   }
-  .eventGallary {
+  .rateFlex{
     width: 100%;
-  }
-  .participantsTable {
+    margin-bottom: 40px; 
+  }  
+  .eventGallary{
     width: 100%;
-  }
+ }
+ .participantsTable{
+  width: 100%;
+}
 }
 
 .eyeDetails {
   color: @plast-color !important;
 
   &:hover {
-    color: @plast-color-hover !important;
+    color: @plast-color-hover !important;;
   }
 }
 
@@ -404,7 +290,7 @@ td {
     font-size: 16px;
     color: black;
     text-align: center;
-
+    
     &:hover {
       color: @plast-color;
       text-decoration: underline;
@@ -416,13 +302,16 @@ td {
   overflow: auto;
   width: 100%;
 
-  .ant-table-thead > tr > th,
-  .ant-table-tbody > tr > td,
-  .ant-table tfoot > tr > th,
-  .ant-table tfoot > tr > td {
+  .ant-table-thead > tr > th, .ant-table-tbody > tr > td, .ant-table tfoot > tr > th, .ant-table tfoot > tr > td {
     position: relative;
     padding: 16px 16px;
     overflow-wrap: break-word;
     background: #fafafa;
   }
+}
+
+.hovering-cardbody > .ant-card-body:hover{
+  text-decoration: none;
+  color: black;  
+  
 }
