--- a/src/pages/Actions/Actions.module.css
+++ b/src/pages/Actions/Actions.module.css
@@ -1,17 +1,21 @@
-.mainTitle {
-  text-align: center;
-  font-size: 40px;
-  color: #3c5438;
+.background{
+    background-color: rgb(238, 238, 238);
 }
 
-.actionsWrapper {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 90%;
-  margin: 0 auto;
+.mainTitle{
+    text-align: center;
+    font-size: 40px;
+    color:#3c5438;
 }
 
-.pagination {
-  text-align: center;
+.actionsWrapper{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0 auto;
 }
+
+.pagination{
+    text-align: center;
+  }
